FeedAgregator
=============
RSS and Atom feed agregator in desktop widgets + notifications
--------------------------------------------------------------
Copyright 2018 Juliette Monsel <j_4321@protonmail.com>

Changelog
---------

- Version 1.0.1
    * Fix update checker

- Version 1.0.0
    * Initial release