@@ -9,6 +9,7 @@ Changelog
 
 - Version 1.0.1
     * Fix update checker
+    * Rename feed from widget
 
 - Version 1.0.0
     * Initial release
